Fixed package generation of CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
-project(Game_Project)
+project(SFML_GameEngine)
 
-set(Game_Project_SOURCES
+set(SFML_GameEngine_VERSION 1.0)
+
+set(SFML_GameEngine_SOURCES
     engine/animatedSprite.cpp
     engine/connection.cpp
     engine/context.cpp
@@ -22,8 +24,8 @@ set(Game_Project_SOURCES
     engine/ec/system.cpp
     )
 
-add_library(Game_Project
-    ${Game_Project_SOURCES})
+add_library(SFML_GameEngine
+    ${SFML_GameEngine_SOURCES})
 
 if(BUILD_SHARED_LIBS OR (UNIX AND NOT CYGWIN))
     find_package(SFML 2 REQUIRED audio network graphics window system)
@@ -40,17 +42,17 @@ if(GAME_USE_GLFW)
     find_package(PkgConfig REQUIRED)
     pkg_search_module(GLFW REQUIRED glfw3)
     include_directories(${GLFW_INCLUDE_DIRS})
-    target_link_libraries(Game_Project ${GLFW_LIBRARIES})
+    target_link_libraries(SFML_GameEngine ${GLFW_LIBRARIES})
 
     add_definitions(-DGAME_USE_GLFW)
 
     find_package(OpenGL REQUIRED)
     include_directories(${OPENGL_INCLUDE_DIRS})
-    target_link_libraries(Game_Project ${OPENGL_LIBRARIES})
+    target_link_libraries(SFML_GameEngine ${OPENGL_LIBRARIES})
 
     find_package(GLEW REQUIRED)
     include_directories(${GLEW_INCLUDE_DIRS})
-    target_link_libraries(Game_Project ${GLEW_LIBRARIES})
+    target_link_libraries(SFML_GameEngine ${GLEW_LIBRARIES})
 else()
     if(GAME_NO_RENDER_WINDOW)
         message(STATUS "Disabling sf::RenderWindow")
@@ -62,13 +64,13 @@ endif()
 
 if(SFML_FOUND)
     include_directories(${SFML_INCLUDE_DIR})
-    target_link_libraries(Game_Project ${SFML_LIBRARIES})
+    target_link_libraries(SFML_GameEngine ${SFML_LIBRARIES})
 endif()
 
 find_package(ResourcePacker 1 CONFIG QUIET)
 if(ResourcePacker_FOUND)
     include_directories(${ResourcePacker_INCLUDE_DIR})
-    target_link_libraries(Game_Project ${ResourcePacker_LIBRARIES})
+    target_link_libraries(SFML_GameEngine ${ResourcePacker_LIBRARIES})
     add_definitions(-DResourcePacker_FOUND)
 else()
     message(STATUS "ResourcePacker not found, continuing without it.")
@@ -77,7 +79,7 @@ endif()
 find_package(Rational 1 CONFIG QUIET)
 if(Rational_FOUND)
     include_directories(${Rational_INCLUDE_DIR})
-    target_link_libraries(Game_Project ${Rational_LIBRARIES})
+    target_link_libraries(SFML_GameEngine ${Rational_LIBRARIES})
     add_definitions(-DRational_FOUND)
 else()
     message(STATUS "Rational not found, continuing without it.")
@@ -105,26 +107,87 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
 endif()
 
-install(TARGETS Game_Project DESTINATION Game_Project)
+install(TARGETS SFML_GameEngine EXPORT SFML_GameEngineTargets
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include)
+
+include(GenerateExportHeader)
+generate_export_header(SFML_GameEngine)
+set_property(TARGET SFML_GameEngine PROPERTY VERSION ${SFML_GameEngine_VERSION})
+set_property(TARGET SFML_GameEngine PROPERTY SOVERSION 1)
+set_property(TARGET SFML_GameEngine PROPERTY INTERFACE_SFML_GameEngine_MAJOR_VERSION 1)
+set_property(TARGET SFML_GameEngine APPEND PROPERTY COMPATIBLE_INTERFACE_STRING SFML_GameEngine_MAJOR_VERSION)
+
+install(
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/sfml_gameengine_export.h"
+    DESTINATION
+        include
+    COMPONENT
+        Devel
+)
+
+install(
+    FILES
+        engine/animatedSprite.hpp
+        engine/connection.hpp
+        engine/context.hpp
+        engine/game.hpp
+        engine/gui.hpp
+        engine/musicPlayer.hpp
+        engine/networkIdentifiers.hpp
+        engine/resourceHolder.hpp
+        engine/resourceHolder.inl
+        engine/resourceIdentifiers.hpp
+        engine/resourceManager.hpp
+        engine/sceneNode.hpp
+        engine/soundPlayer.hpp
+        engine/state.hpp
+        engine/stateStack.hpp
+        engine/utility.hpp
+    DESTINATION
+        include/engine
+    COMPONENT
+        Devel
+)
+
+install(
+    FILES
+        engine/ec/cAcceleration.hpp
+        engine/ec/component.hpp
+        engine/ec/cPosition.hpp
+        engine/ec/cVelocity.hpp
+        engine/ec/engine.hpp
+        engine/ec/entity.hpp
+        engine/ec/nMove.hpp
+        engine/ec/node.hpp
+        engine/ec/system.hpp
+    DESTINATION
+        include/engine/ec
+    COMPONENT
+        Devel
+)
 
 if(WIN32)
-    install(FILES "${SFML_ROOT}/bin/libsndfile-1.dll" DESTINATION Game_Project)
-    install(FILES "${SFML_ROOT}/bin/openal32.dll" DESTINATION Game_Project)
+    install(FILES "${SFML_ROOT}/bin/libsndfile-1.dll" DESTINATION SFML_GameEngine)
+    install(FILES "${SFML_ROOT}/bin/openal32.dll" DESTINATION SFML_GameEngine)
     if(ResourcePacker_FOUND AND BUILD_SHARED_LIBS)
-        install(FILES "${ResourcePacker_LIBRARY}" DESTINATION Game_Project)
+        install(FILES "${ResourcePacker_LIBRARY}" DESTINATION SFML_GameEngine)
     endif()
     if(CMAKE_BUILD_TYPE MATCHES "Debug" AND BUILD_SHARED_LIBS)
-        install(FILES "${SFML_ROOT}/bin/sfml-audio-d-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-graphics-d-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-network-d-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-system-d-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-window-d-2.dll" DESTINATION Game_Project)
+        install(FILES "${SFML_ROOT}/bin/sfml-audio-d-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-graphics-d-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-network-d-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-system-d-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-window-d-2.dll" DESTINATION SFML_GameEngine)
     elseif(BUILD_SHARED_LIBS)
-        install(FILES "${SFML_ROOT}/bin/sfml-audio-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-graphics-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-network-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-system-2.dll" DESTINATION Game_Project)
-        install(FILES "${SFML_ROOT}/bin/sfml-window-2.dll" DESTINATION Game_Project)
+        install(FILES "${SFML_ROOT}/bin/sfml-audio-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-graphics-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-network-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-system-2.dll" DESTINATION SFML_GameEngine)
+        install(FILES "${SFML_ROOT}/bin/sfml-window-2.dll" DESTINATION SFML_GameEngine)
     endif()
 endif()
 
@@ -148,16 +211,53 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
         add_executable(GLTest
             ${GLTest_SOURCES})
 
-        target_link_libraries(GLTest Game_Project)
+        target_link_libraries(GLTest SFML_GameEngine)
 
         include_directories(${OPENGL_INCLUDE_DIRS})
-        target_link_libraries(Game_Project ${OPENGL_LIBRARIES})
+        target_link_libraries(SFML_GameEngine ${OPENGL_LIBRARIES})
 
         include_directories(${GLEW_INCLUDE_DIRS})
-        target_link_libraries(Game_Project ${GLEW_LIBRARIES})
+        target_link_libraries(SFML_GameEngine ${GLEW_LIBRARIES})
     endif()
 endif()
 
+
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/SFML_GameEngine/SFML_GameEngineConfigVersion.cmake"
+    VERSION ${SFML_GameEngine_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+export(EXPORT SFML_GameEngineTargets
+    FILE "${CMAKE_CURRENT_BINARY_DIR}/SFML_GameEngine/SFML_GameEngineTargets.cmake"
+)
+
+configure_file(cmake/SFML_GameEngineConfig.cmake
+    "${CMAKE_CURRENT_BINARY_DIR}/SFML_GameEngine/SFML_GameEngineConfig.cmake"
+    @ONLY
+)
+
+export(PACKAGE SFML_GameEngine)
+
+set(ConfigPackageLocation lib/cmake/SFML_GameEngine)
+
+install(EXPORT SFML_GameEngineTargets
+    FILE
+        SFML_GameEngineTargets.cmake
+    DESTINATION
+        ${ConfigPackageLocation}
+)
+
+install(
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/SFML_GameEngine/SFML_GameEngineConfig.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/SFML_GameEngine/SFML_GameEngineConfigVersion.cmake"
+    DESTINATION
+        ${ConfigPackageLocation}
+    COMPONENT
+        Devel
+)
 
 ################################################################################
 #   Begin Unit Test files
@@ -187,7 +287,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
         include_directories(${GTEST_INCLUDE_DIRS})
         target_link_libraries(Unit_Tests ${GTEST_BOTH_LIBRARIES})
         target_link_libraries(Unit_Tests ${SFML_LIBRARIES})
-        target_link_libraries(Unit_Tests Game_Project)
+        target_link_libraries(Unit_Tests SFML_GameEngine)
 
         if(ResourcePacker_FOUND)
             target_link_libraries(Unit_Tests ${ResourcePacker_LIBRARIES})
