Changed naming of lib
Also added ResourcePacker as dependency

--- a/buildWin/Makefile
+++ b/buildWin/Makefile
@@ -1,20 +1,27 @@
+SFML_GameEngine_VERSION = 1.1
+
 SRC_ROOT = ../src
-SFML_ROOT = /home/stephen/Downloads/SFML-2.3.2-source/build64Win/install
+SFML_ROOT ?= /home/stephen/Downloads/SFML-2.3.2-source/build64Win/install
+RESOURCE_PACKER_ROOT ?= /home/stephen/Git/ResourcePacker/buildRelease/install
+RESOURCE_PACKER_LIB ?= /home/stephen/Git/ResourcePacker/buildWin/libResourcePacker1.2.0.dll
 CXX = x86_64-w64-mingw32-g++
 CXXFLAGS = -c -std=c++11 -Wall -Wextra -O3 -D NDEBUG \
            -I${SFML_ROOT}/include \
            -I${SRC_ROOT} \
+           -I${RESOURCE_PACKER_ROOT}/include \
            -mwindows
 CXXDEBUGFLAGS = -c -std=c++11 -Wall -Wextra -O0 -g -D_GLIBCXX_DEBUG \
            -I${SFML_ROOT}/include \
            -I${SRC_ROOT} \
+           -I${RESOURCE_PACKER_ROOT}/include \
            -mwindows
 LINKER_FLAGS = -mwindows -Wall
 LINKER_LIBS = ${SFML_ROOT}/bin/sfml-audio-2.dll \
               ${SFML_ROOT}/bin/sfml-network-2.dll \
               ${SFML_ROOT}/bin/sfml-graphics-2.dll \
               ${SFML_ROOT}/bin/sfml-window-2.dll \
-              ${SFML_ROOT}/bin/sfml-system-2.dll
+              ${SFML_ROOT}/bin/sfml-system-2.dll \
+              ${RESOURCE_PACKER_LIB}
 
 SFML_GameEngine_SOURCES =  \
           ${SRC_ROOT}/engine/animatedSprite.o \
@@ -40,19 +47,19 @@ NetworkingTest_SOURCES = ${SRC_ROOT}/../NetworkingTest/Main.o \
           ${SRC_ROOT}/engine/connection.o \
           ${SRC_ROOT}/engine/networkIdentifiers.o
 
-all:    libSFML_GameEngine.so.1.0 NetworkingTest.exe
+all:    libSFML_GameEngine${SFML_GameEngine_VERSION}.dll NetworkingTest.exe
 
-libSFML_GameEngine.so.1.0: ${SFML_GameEngine_SOURCES}
-		$(CXX) $(LINKER_FLAGS) -shared -Wl,-soname,libSFML_GameEngine.so.1 -o libSFML_GameEngine.so.1.0 ${LINKER_LIBS} ${SFML_GameEngine_SOURCES}
+libSFML_GameEngine${SFML_GameEngine_VERSION}.dll: ${SFML_GameEngine_SOURCES}
+		$(CXX) $(LINKER_FLAGS) -shared -Wl,-soname,libSFML_GameEngine.so.1 -o libSFML_GameEngine${SFML_GameEngine_VERSION}.dll ${LINKER_LIBS} ${SFML_GameEngine_SOURCES}
 
 NetworkingTest.exe: ${NetworkingTest_SOURCES}
 		$(CXX) $(LINKER_FLAGS) -o NetworkingTest.exe ${LINKER_LIBS} ${NetworkingTest_SOURCES}
 
 clean:	../src.clean ../src/engine.clean ../src/engine/ec.clean ../NetworkingTest.clean
-		rm -f libSFML_GameEngine.so.1.0
+		rm -f libSFML_GameEngine${SFML_GameEngine_VERSION}.dll
 		rm -f NetworkingTest.exe
 
-objectOnlyClean:	../src.clean ../src/engine.clean ../src/engine/ec.clean ../NetworkingTest.clean
+cleanObjectsOnly:	../src.clean ../src/engine.clean ../src/engine/ec.clean ../NetworkingTest.clean
 
 
 %.clean:
