--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.6)
 project(SFML_GameEngine)
 
+if(NOT EXISTS ../ResourcePacker/src)
+    message(FATAL_ERROR "ResourcePacker is missing!\nPlease update the ResourcePacker submodule by running 'git sumbodule init' and 'git submodule update'!")
+endif()
+
 add_subdirectory(../ResourcePacker/src ResourcePackerBuild)
 include_directories(../ResourcePacker/src)
 link_directories(${CMAKE_BINARY_DIR}/ResourcePackerBuild)
